--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             justify-content: space-between;
             align-items: center;
             position: relative;
+            height: 80px;
         }
 
         .header::before {
@@ -124,10 +125,11 @@
             gap: 1.5rem;
             position: relative;
             z-index: 2;
+            height: 100%;
         }
 
         .logo-svg {
-            height: 45px;
+            height: 105px;
             width: auto;
             flex-shrink: 0;
             object-fit: contain;
